# gstreamer-overlay-qt-basic

./: README.md  kill-backend.sh  run.sh
backend/: CMakeLists.txt  server.cpp
frontend/: CMakeLists.txt  main.cpp  overlay.cpp  overlay.h  videoplayer.cpp  videoplayer.h
